tests/rosetta/out/Smalltalk/convex-hull.out
/tmp/convex-hull.st:8: parse error, expected ']'
