tests/rosetta/out/Smalltalk/convex-hull.st
" Generated by Mochi compiler v0.10.30 on 2006-01-02T15:04:05Z
"
| ccw sortPoints arr n i j p q convexHull h pt t pointStr hullStr s pts hull |
ccw := [:a :b :c | ((((((b at: 'x') - (a at: 'x'))) * (((c at: 'y') - (a at: 'y'))))) > (((((b at: 'y') - (a at: 'y'))) * (((c at: 'x') - (a at: 'x')))))). ].
sortPoints := [:ps | arr := ps.
n := (arr size).
i := 0.
[(i < n)] whileTrue: [.
j := 0.
[(j < ((n - 1)))] whileTrue: [.
p := arr at: j.
q := arr at: (j + 1).
((((p.x > q.x)) or: [((((p.x = q.x)) and: [((p.y > q.y))]))])) ifTrue: [
arr at: j put: q.
arr at: (j + 1) put: p.
] .
j := (j + 1).
].
.
i := (i + 1).
].
.
arr. ].
convexHull := [:ps | ps := sortPoints value: ps.
h := {}.
ps do: [:pt |.
[(((0 >= 2)) and: [(((ccw value: h at: (0 - 2) value: h at: (0 - 1) value: pt) = false))])] whileTrue: [.
h := h copyFrom: 1 to: (((h size)) - 1).
].
.
h := h copyWith: pt.
].
.
i := (((ps size)) - 2).
t := (((h size)) + 1).
[(i >= 0)] whileTrue: [.
pt := ps at: i.
[(((((h size)) >= t)) and: [(((ccw value: h at: (((h size)) - 2) value: h at: (((h size)) - 1) value: pt) = false))])] whileTrue: [.
h := h copyFrom: 1 to: (((h size)) - 1).
].
.
h := h copyWith: pt.
i := (i - 1).
].
.
h copyFrom: 1 to: (((h size)) - 1). ].
pointStr := [:p | ((((((('(' + ((p at: 'x' asString)))) + ',')) + ((p at: 'y' asString)))) + ')'). ].
hullStr := [:h | s := '['.
i := 0.
[(i < ((h size)))] whileTrue: [.
s := (s + (pointStr value: h at: i)).
((i < ((((h size)) - 1)))) ifTrue: [
s := (s + (' ')).
] .
i := (i + 1).
].
.
s := (s + ']').
s. ].
pts := {Dictionary from:{'x'->16. 'y'->3}. Dictionary from:{'x'->12. 'y'->17}. Dictionary from:{'x'->0. 'y'->6}. Dictionary from:{'x'->-4. 'y'->-6}. Dictionary from:{'x'->16. 'y'->6}. Dictionary from:{'x'->16. 'y'->-7}. Dictionary from:{'x'->16. 'y'->-3}. Dictionary from:{'x'->17. 'y'->-4}. Dictionary from:{'x'->5. 'y'->19}. Dictionary from:{'x'->19. 'y'->-8}. Dictionary from:{'x'->3. 'y'->16}. Dictionary from:{'x'->12. 'y'->13}. Dictionary from:{'x'->3. 'y'->-4}. Dictionary from:{'x'->17. 'y'->5}. Dictionary from:{'x'->-3. 'y'->15}. Dictionary from:{'x'->-3. 'y'->-9}. Dictionary from:{'x'->0. 'y'->11}. Dictionary from:{'x'->-9. 'y'->-3}. Dictionary from:{'x'->-4. 'y'->-2}. Dictionary from:{'x'->12. 'y'->10}}.
hull := convexHull value: pts.
Transcript show: ((('Convex Hull: ') + (hullStr value: hull))) printString; cr.
